# churn

./: Makefile  README.md  pyproject.toml
models/: churn.pkl
notebooks/: AI_agent.ipynb  EDA.ipynb  test.ipynb
src/: chat.py  chatbot.py  evaluate.py  load.py  main.py  train.py
src/pages/: 1_user_guide.py
